--- a/proyecto.prod/admin-web/front-end/src/styles.css
+++ b/proyecto.prod/admin-web/front-end/src/styles.css
@@ -72,11 +72,108 @@ body {
     background: #fff;
 }
 
+.titulo {
+    font-family: "Knewave", system-ui;
+    font-variant: inherit;
+    font-weight: 100;
+}
+
+.subtitulo {
+    font-family: "Fugaz One", sans-serif;
+    font-variant: inherit;
+    font-weight: 300;
+}
+
 /* === CONTENIDO PRINCIPAL === */
 .content {
     padding: 16px;
     max-width: 1100px;
     margin: 0 auto;
+}
+
+/* === Rutas Page === */
+.rutas-page {
+    background-color: #ffffff;
+    padding: 15px;
+    border-radius: 18px;
+}
+
+.MapContainer {
+    background-color: #ffffff;
+    margin-top: 8px;
+    padding: 20px;
+    border-radius: 18px;
+    display: flex;
+    height: 80vh;
+}
+
+.panel-lateral {
+    width: 30%;
+    overflow-y: auto;
+    border-right: 1px solid #ddd;
+    padding: 16px;
+    box-sizing: border-box;
+}
+
+.container-info-rutas {
+    margin: 5px;
+}
+
+.container-info-rutas select {
+    margin-top: 5px;
+    border: 1px solid var(--border);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.container-botones-rutas {
+    margin-top: 10px;
+    display: flex;
+    gap: 8px;
+    flex-wrap: wrap;
+}
+
+.button {
+    margin-top: 5px;
+    padding: 10px;
+    border: 1px solid var(--border);
+    border-radius: 10px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-bottom: 5px;
+}
+
+.button.button-ruta {
+    background-color: #2e703ed8;
+    color: #ffffff;
+
+}
+
+.button.button-modal {
+    background-color: rgb(255, 255, 255);
+    color: #142e1ad8;
+    margin: 5px;
+}
+
+.container-ruta-detalles {
+    border-bottom: 4px solid #b4b4b4c0;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+.area-mapa {
+    flex: 1;
+    position: relative;
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #2e703eff;
+    color: white;
+    padding: 8px 12px;
+    border-radius: 16px;
 }
 
 /* === TARJETAS === */
@@ -118,11 +215,7 @@ body {
 }
 
 .card h3 {
-    font-family: "Fugaz One", sans-serif;
-    margin: 0 0 12px;
     color: #ebe5e5;
-    font-variant: inherit;
-    font-weight: 100;
 }
 
 .card button {
