--- a/proyecto.prod/admin-web/front-end/src/components/cronograma/cronograma.css
+++ b/proyecto.prod/admin-web/front-end/src/components/cronograma/cronograma.css
@@ -124,6 +124,13 @@
     animation: spin 1s linear infinite;
     margin: 1rem auto;
 }
+.select-editar{
+    padding: 8px;
+    border-radius: 12px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    width: 100%;
+}
 
 @keyframes spin {
     0% {
